fix: display only the hovered scrollbar bar on nested ScrollPanels

--- a/src/app/components/scrollpanel/scrollpanel.css
+++ b/src/app/components/scrollpanel/scrollpanel.css
@@ -40,8 +40,8 @@
     visibility: hidden;
 }
 
-.p-scrollpanel:hover .p-scrollpanel-bar,
-.p-scrollpanel:active .p-scrollpanel-bar {
+.p-scrollpanel:hover > .p-scrollpanel-bar,
+.p-scrollpanel:active > .p-scrollpanel-bar {
     opacity: 1;
 }
 
